saw-web/src/app/modules/observe/components/observe-view/observe-view.component.scss
:host {
  height: 100%;
}

mat-sidenav-container {
  .mat-drawer-backdrop.mat-drawer-shown {
    background: none;
  }
}

.mat-sidenav-container {
  height: 100%;

  mat-sidenav-content {
    height: 100%;
  }
}

mat-sidenav-container .mat-drawer-backdrop.mat-drawer-shown {
  background: none;
}

.page-header-toolbar {
  display: flex;
  width: 100%;
  padding: 0 20px;
  box-sizing: border-box;

  h2 {
    flex-grow: 1;

    .dashboard-default-button {
      height: 30px;
      line-height: 30px;
      width: 30px;

      mat-icon {
        font-size: 20px;
        vertical-align: baseline;
      }

      &.default-selected {
        color: #fcd53e;
      }
    }
  }

  .page-header-actions {
    align-self: center;
    display: flex;
    align-items: center;
    flex-grow: 1;
    justify-content: flex-end;

    button {
      height: 36px;
    }

    mat-slide-toggle {
      margin-left: 10px;
    }

    .dashboard-action-button {
      padding: 0 2px;
      flex-grow: 1;
      min-width: 64px;
      max-width: 88px;
    }
  }
}

.mat-drawer-container {
  height: 100%;
}

.page-content {
  width: 100%;
  height: calc(100% - 62px);
  display: flex;
  align-items: center;

  span.no-dashboard-notice {
    margin: 0 auto;
    font-size: 1.5em;
  }
}

